--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -6,7 +6,7 @@
   }
   .lds-ripple div {
     position: absolute;
-    border: 4px solid rgb(18, 4, 218);
+    border: 4px solid #59e209;
     opacity: 1;
     border-radius: 50%;
     animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
